include/wtf.h

typedef struct wtf_session wtf_session_t;
typedef struct wtf_stream wtf_stream_t;
typedef enum {
    WTF_EXECUTION_PROFILE_LOW_LATENCY = 0,     
    WTF_EXECUTION_PROFILE_MAX_THROUGHPUT = 1,  
    WTF_EXECUTION_PROFILE_REAL_TIME = 2,       
    WTF_EXECUTION_PROFILE_SCAVENGER = 3        
} wtf_execution_profile_t;
typedef enum {
    WTF_SUCCESS = 0,
    WTF_ERROR_INVALID_PARAMETER,
    WTF_ERROR_OUT_OF_MEMORY,
    WTF_ERROR_INTERNAL,
    WTF_ERROR_CONNECTION_ABORTED,
    WTF_ERROR_STREAM_ABORTED,
    WTF_ERROR_INVALID_STATE,
    WTF_ERROR_BUFFER_TOO_SMALL,
    WTF_ERROR_NOT_FOUND,
    WTF_ERROR_REJECTED,
    WTF_ERROR_TIMEOUT,
    WTF_ERROR_TLS_HANDSHAKE_FAILED,
    WTF_ERROR_PROTOCOL_VIOLATION,
    WTF_ERROR_FLOW_CONTROL
} wtf_result_t;
typedef enum {
    WTF_LOG_LEVEL_TRACE = 0,     
    WTF_LOG_LEVEL_DEBUG = 1,     
    WTF_LOG_LEVEL_INFO = 2,      
    WTF_LOG_LEVEL_WARN = 3,      
    WTF_LOG_LEVEL_ERROR = 4,     
    WTF_LOG_LEVEL_CRITICAL = 5,  
    WTF_LOG_LEVEL_NONE = 6       
} wtf_log_level_t;
typedef enum {
    WTF_SERVER_STOPPED,    
    WTF_SERVER_STARTING,   
    WTF_SERVER_LISTENING,  
    WTF_SERVER_STOPPING    
} wtf_server_state_t;
typedef enum {
    WTF_SESSION_HANDSHAKING,  
    WTF_SESSION_CONNECTED,    
    WTF_SESSION_DRAINING,     
    WTF_SESSION_CLOSED        
} wtf_session_state_t;
typedef enum {
    WTF_STREAM_OPEN,     
    WTF_STREAM_CLOSING,  
    WTF_STREAM_CLOSED    
} wtf_stream_state_t;
typedef enum {
    WTF_STREAM_BIDIRECTIONAL = 0,  
    WTF_STREAM_UNIDIRECTIONAL = 1  
} wtf_stream_type_t;
typedef enum {
    WTF_CONNECTION_ACCEPT,  
    WTF_CONNECTION_REJECT   
} wtf_connection_decision_t;
typedef enum {
    WTF_H3_NO_ERROR = 0x0100,
    WTF_H3_GENERAL_PROTOCOL_ERROR = 0x0101,
    WTF_H3_INTERNAL_ERROR = 0x0102,
    WTF_H3_STREAM_CREATION_ERROR = 0x0103,
    WTF_H3_CLOSED_CRITICAL_STREAM = 0x0104,
    WTF_H3_FRAME_UNEXPECTED = 0x0105,
    WTF_H3_FRAME_ERROR = 0x0106,
    WTF_H3_EXCESSIVE_LOAD = 0x0107,
    WTF_H3_ID_ERROR = 0x0108,
    WTF_H3_SETTINGS_ERROR = 0x0109,
    WTF_H3_MISSING_SETTINGS = 0x010a,
    WTF_H3_REQUEST_REJECTED = 0x010b,
    WTF_H3_REQUEST_CANCELLED = 0x010c,
    WTF_H3_REQUEST_INCOMPLETE = 0x010d,
    WTF_H3_MESSAGE_ERROR = 0x010e,
    WTF_H3_CONNECT_ERROR = 0x010f,
    WTF_H3_VERSION_FALLBACK = 0x0110
} wtf_h3_error_t;
typedef enum {
    WTF_DATAGRAM_SEND_UNKNOWN = 0,  
    WTF_DATAGRAM_SEND_SENT = 1,
    WTF_DATAGRAM_SEND_LOST_SUSPECTED = 2,
    WTF_DATAGRAM_SEND_LOST_DISCARDED = 3,
    WTF_DATAGRAM_SEND_ACKNOWLEDGED = 4,
    WTF_DATAGRAM_SEND_ACKNOWLEDGED_SPURIOUS = 5,
    WTF_DATAGRAM_SEND_CANCELED = 6
} wtf_datagram_send_state_t;
typedef enum {
    WTF_QPACK_DECOMPRESSION_FAILED = 0x0200,
    WTF_QPACK_ENCODER_STREAM_ERROR = 0x0201,
    WTF_QPACK_DECODER_STREAM_ERROR = 0x0202
} wtf_qpack_error_t;
typedef enum {
    WTF_H3_DATAGRAM_ERROR = 0x33
} wtf_h3_datagram_error_t;
typedef enum {
    WTF_CAPSULE_DATAGRAM = 0x00,
    WTF_CAPSULE_CLOSE_WEBTRANSPORT_SESSION = 0x2843,
    WTF_CAPSULE_DRAIN_WEBTRANSPORT_SESSION = 0x78ae
} wtf_capsule_type_t;
typedef enum {
    WTF_SESSION_EVENT_CONNECTED,                   
    WTF_SESSION_EVENT_DISCONNECTED,                
    WTF_SESSION_EVENT_DRAINING,                    
    WTF_SESSION_EVENT_STREAM_OPENED,               
    WTF_SESSION_EVENT_DATAGRAM_SEND_STATE_CHANGE,  
    WTF_SESSION_EVENT_DATAGRAM_RECEIVED,           
} wtf_session_event_type_t;
typedef enum {
    WTF_STREAM_EVENT_DATA_RECEIVED,  
    WTF_STREAM_EVENT_SEND_COMPLETE,  
    WTF_STREAM_EVENT_PEER_CLOSED,    
    WTF_STREAM_EVENT_CLOSED,         
    WTF_STREAM_EVENT_ABORTED         
} wtf_stream_event_type_t;
typedef struct {
    uint32_t length;  
    uint8_t* data;    
} wtf_buffer_t;
typedef struct {
    const char* name;   
    const char* value;  
} wtf_http_header_t;
typedef struct {
    const char* origin;                
    const char* path;                  
    const char* authority;             
    const wtf_http_header_t* headers;  
    size_t header_count;               
    void* peer_address;                
    size_t address_length;             
} wtf_connection_request_t;
typedef struct {
    wtf_session_event_type_t type;  
    wtf_session_t* session;         
    void* user_context;             
    union {
        struct {
            uint32_t error_code;  
            const char* reason;   
        } disconnected;
        struct {
            wtf_stream_t* stream;           
            wtf_stream_type_t stream_type;  
        } stream_opened;
        struct {
            wtf_buffer_t* buffers;            
            uint32_t buffer_count;            
            wtf_datagram_send_state_t state;  
        } datagram_send_state_changed;
        struct {
            const uint32_t length;  
            const uint8_t* data;    
        } datagram_received;
    };
} wtf_session_event_t;
typedef struct {
    wtf_stream_event_type_t type;  
    wtf_stream_t* stream;          
    void* user_context;            
    union {
        struct {
            wtf_buffer_t* buffers;  
            uint32_t buffer_count;  
            bool fin;               
        } data_received;
        struct {
            wtf_buffer_t* buffers;  
            uint32_t buffer_count;  
            bool cancelled;         
        } send_complete;
        struct {
            uint32_t error_code;  
        } aborted;
    };
} wtf_stream_event_t;
typedef struct {
    uint32_t error_code;        
    const char* description;    
    bool is_application_error;  
    bool is_transport_error;    
    bool is_protocol_error;     
} wtf_error_details_t;
typedef enum {
    WTF_CERT_TYPE_NONE,            
    WTF_CERT_TYPE_FILE,            
    WTF_CERT_TYPE_FILE_PROTECTED,  
    WTF_CERT_TYPE_HASH,            
    WTF_CERT_TYPE_HASH_STORE,      
    WTF_CERT_TYPE_CONTEXT,         
    WTF_CERT_TYPE_PKCS12,          
} wtf_certificate_type_t;
typedef struct {
    wtf_certificate_type_t cert_type;  
    union {
        struct {
            const char* cert_path;  
            const char* key_path;   
        } file;
        struct {
            const char* cert_path;  
            const char* key_path;   
            const char* password;   
        } protected_file;
        struct {
            const char* thumbprint;  
        } hash;
        struct {
            const char* thumbprint;  
            const char* store_name;  
        } hash_store;
        struct {
            const void* data;      
            size_t data_size;      
            const char* password;  
        } pkcs12;
        void* context;  
    } cert_data;
    const char* principal;     
    const char* ca_cert_file;  
} wtf_certificate_config_t;