src/types.h

typedef struct wtf_connection wtf_connection;
typedef struct wtf_server wtf_server;
typedef struct wtf_session wtf_session;
typedef struct wtf_stream wtf_stream;
typedef struct wtf_http3_stream wtf_http3_stream;
typedef enum {
    WTF_INTERNAL_STREAM_STATE_IDLE,
    WTF_INTERNAL_STREAM_STATE_OPEN,
    WTF_INTERNAL_STREAM_STATE_HALF_CLOSED_LOCAL,
    WTF_INTERNAL_STREAM_STATE_HALF_CLOSED_REMOTE,
    WTF_INTERNAL_STREAM_STATE_CLOSED,
    WTF_INTERNAL_STREAM_STATE_RESET
} wtf_internal_stream_state_t;
typedef struct wtf_stream {
    HQUIC quic_stream;
    uint64_t stream_id;
    wtf_session* session;
    wtf_stream_type_t type;
    wtf_internal_stream_state_t state;
    wtf_stream_callback_t callback;
    void* user_context;
    uint16_t priority;
    bool receive_enabled;
    mtx_t mutex;
} wtf_stream;
typedef struct wtf_http3_stream {
    uint64_t id;
    HQUIC quic_stream;
    wtf_connection* connection;
    uint64_t type;
    wtf_internal_stream_state_t state;
    uint32_t buffered_frames_length;
    uint8_t buffered_frames[1024];
    bool frame_header_complete;
    uint8_t* header_buffer;
    size_t header_buffer_size;
    size_t header_buffer_used;
    wtf_session* webtransport_session;
    bool is_webtransport;
    uint64_t capsule_type;
    uint64_t capsule_length;
    uint64_t capsule_bytes_read;
    bool capsule_header_complete;
    uint8_t* capsule_buffer;
} wtf_http3_stream;
typedef struct wtf_session {
    wtf_connection* connection;
    wtf_http3_stream* connect_stream;
    wtf_session_state_t state;
    uint64_t id;
    wtf_session_callback_t callback;
    void* user_context;
    stream_map streams;
    uint32_t max_streams;
    mtx_t streams_mutex;
    uint32_t close_error_code;
    char* close_reason;
} wtf_session;
typedef struct wtf_connection {
    uint64_t id;
    HQUIC quic_connection;
    wtf_server* server;
    wtf_connection_state_t state;
    uint32_t max_datagram_size;
    wtf_settings local_settings;
    wtf_settings peer_settings;
    wtf_http3_stream* control_stream;
    wtf_http3_stream* qpack_encoder_stream;
    wtf_http3_stream* qpack_decoder_stream;
    wtf_http3_stream* peer_control_stream;
    wtf_http3_stream* peer_encoder_stream;
    wtf_http3_stream* peer_decoder_stream;
    http3_stream_map streams;
    mtx_t streams_mutex;
    wtf_qpack_context qpack;
    session_map sessions;
    uint32_t max_sessions;
    mtx_t sessions_mutex;
    http3_stream_map buffered_streams;
    uint32_t buffered_stream_count;
    wtf_datagram* buffered_datagrams;
    uint32_t buffered_datagram_count;
    mtx_t buffered_mutex;
    QUIC_ADDR peer_address;
} wtf_connection;
typedef struct wtf_server {
    wtf_context_t* context;
    wtf_server_config_t config;
    wtf_server_state_t state;
    HQUIC listener;
    HQUIC configuration;
    QUIC_CREDENTIAL_CONFIG* cred_config;
    connection_map connections;
    mtx_t connections_mutex;
    mtx_t mutex;
} wtf_server;
typedef struct wtf_context {
    wtf_context_config_t config;
    const QUIC_API_TABLE* quic_api;
    HQUIC registration;
    wtf_server* server;
    wtf_log_callback_t log_callback;
    void* log_user_context;
    wtf_log_level_t log_level;
    mtx_t mutex;
} wtf_context;